--- a/arch/arm/configs/u2evm_defconfig
+++ b/arch/arm/configs/u2evm_defconfig
@@ -142,7 +142,7 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_USERSPACE_CONSUMER=y
 CONFIG_REGULATOR_TPS80031=y
 CONFIG_ION=y
-CONFIG_ION_R_MOBILE=y
+CONFIG_ION_R_MOBILE=m
 CONFIG_FB=y
 CONFIG_FB_SH_MOBILE_LCDC=y
 # CONFIG_FB_SH_MOBILE_MERAM is not set
