--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -2,6 +2,9 @@
 # Makefile for the kernel character device drivers.
 #
 
+obj-y				+= mfis/
+obj-y				+= rtapi/rtapi/
+
 obj-y				+= mem.o random.o
 obj-$(CONFIG_TTY_PRINTK)	+= ttyprintk.o
 obj-y				+= misc.o
