Initial release for led and vibrator drivers with baseline EOS2_APESW_KOTA_12w14_D2

--- a/arch/arm/configs/u2evm_defconfig
+++ b/arch/arm/configs/u2evm_defconfig
@@ -158,7 +158,7 @@ CONFIG_MMC_SH_MMCIF=y
 CONFIG_MMC_RENESAS_SDHI=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
-CONFIG_LEDS_RENESAS_TPU=y
+CONFIG_LEDS_RENESAS_TPU=n
 CONFIG_SWITCH=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_INTF_PROC is not set
@@ -209,3 +209,7 @@ CONFIG_MHI_MHDP=y
 CONFIG_NET_SCH_MHI=y
 CONFIG_NET_SCHED=y
 # <<< TO ADD ONCE SMECO AND PHONET OK
+CONFIG_TPU_PWM=y
+CONFIG_VIBRATOR=y
+CONFIG_PCM2PWM=n
+
