--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -50,3 +50,7 @@ obj-y				+= carma/
 obj-$(CONFIG_WL127X_RFKILL)	+= wl127x-rfkill.o
 obj-$(CONFIG_APANIC)		+= apanic.o
 obj-$(CONFIG_SENSORS_AK8975)	+= akm8975.o
+
+obj-$(CONFIG_TPU_PWM)		+= pwm/
+obj-$(CONFIG_VIBRATOR)		+= vibrator/
+obj-$(CONFIG_PCM2PWM)		+= pcm2pwm/
