Initial release for Power Management and PMIC

--- a/arch/arm/configs/u2evm_defconfig
+++ b/arch/arm/configs/u2evm_defconfig
@@ -48,7 +48,7 @@ CONFIG_KEXEC=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-# CONFIG_SUSPEND is not set
+
 CONFIG_WAKELOCK=y
 CONFIG_PM_RUNTIME=y
 CONFIG_NET=y
@@ -209,3 +209,48 @@ CONFIG_MHI_MHDP=y
 CONFIG_NET_SCH_MHI=y
 CONFIG_NET_SCHED=y
 # <<< TO ADD ONCE SMECO AND PHONET OK
+
+
+#
+# Power management options
+#
+CONFIG_SUSPEND=n
+CONFIG_PM_SLEEP=n
+CONFIG_PM_DEBUG=n
+CONFIG_CPU_IDLE=n
+#CONFIG_HOTPLUG_CPU=n
+CONFIG_COMPACTION=n
+CONFIG_PDC=n
+CONFIG_SHMOBILE_CPUFREQ=n
+CONFIG_CPU_FREQ=n
+
+# Secure OS support
+CONFIG_PM_HAS_SECURE=n
+CONFIG_PM_SECURE_HAL_DUMMY=n
+
+#
+# SH-Mobile CPU Frequency Setting
+#
+CONFIG_SH_TRANSITION_LATENCY=5000
+CONFIG_SH_UP_THRESHOLD=80
+CONFIG_SH_DOWN_THRESHOLD=20
+CONFIG_SH_FRQ_STEP=15
+
+#
+# CPU Frequency scaling
+#
+CONFIG_CPU_FREQ_TABLE=y
+CONFIG_CPU_FREQ_STAT=y
+# CONFIG_CPU_FREQ_STAT_DETAILS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
+# CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
