--- a/kernel/power/Makefile
+++ b/kernel/power/Makefile
@@ -16,3 +16,5 @@ obj-$(CONFIG_FB_EARLYSUSPEND)	+= fbearlysuspend.o
 obj-$(CONFIG_SUSPEND_TIME)	+= suspend_time.o
 
 obj-$(CONFIG_MAGIC_SYSRQ)	+= poweroff.o
+
+obj-$(CONFIG_PM_DEBUG)		+= pm_test.o
