--- a/arch/arm/configs/u2evm_defconfig
+++ b/arch/arm/configs/u2evm_defconfig
@@ -148,6 +148,12 @@ CONFIG_FB_SH_MOBILE_LCDC=y
 # CONFIG_FB_SH_MOBILE_MERAM is not set
 # CONFIG_LCD_CLASS_DEVICE is not set
 # CONFIG_BACKLIGHT_GENERIC is not set
+CONFIG_SOUND=y
+CONFIG_SND=y
+CONFIG_SND_SOC=y
+CONFIG_SND_SOC_SH4_FSI=m
+CONFIG_SND_SOC_MAX98090=y
+CONFIG_SND_FSI_MAX98090=m
 # CONFIG_HID_SUPPORT is not set
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_R8A66597=y
