--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -33,6 +33,7 @@ config SND_SOC_ALL_CODECS
 	select SND_SOC_DFBMCS320
 	select SND_SOC_JZ4740_CODEC if SOC_JZ4740
 	select SND_SOC_LM4857 if I2C
+	select SND_SOC_MAX98090 if I2C
 	select SND_SOC_MAX98088 if I2C
 	select SND_SOC_MAX98095 if I2C
 	select SND_SOC_MAX9850 if I2C
@@ -190,6 +191,10 @@ config SND_SOC_DFBMCS320
 
 config SND_SOC_DMIC
 	tristate
+
+config SND_SOC_MAX98090
+        tristate
+        default y
 
 config SND_SOC_MAX98088
        tristate
