--- a/sound/soc/sh/Kconfig
+++ b/sound/soc/sh/Kconfig
@@ -62,6 +62,15 @@ config SND_FSI_DA7210
 	  This option enables generic sound support for the
 	  FSI - DA7210 unit
 
+config SND_FSI_MAX98090
+#	bool "FSI-MAX98090 sound support"
+	tristate "FSI-MAX98090 sound support"
+	depends on SND_SOC_SH4_FSI && I2C
+	select SND_SOC_MAX98090
+	help
+	  This option enables generic sound support for the
+	  FSI - MAX98090 unit
+
 config SND_FSI_HDMI
 	tristate "FSI-HDMI sound support"
 	depends on SND_SOC_SH4_FSI && FB_SH_MOBILE_HDMI
