--- a/arch/arm/configs/u2evm_defconfig
+++ b/arch/arm/configs/u2evm_defconfig
@@ -106,7 +106,6 @@ CONFIG_IP6_NF_IPTABLES=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
-# CONFIG_WIRELESS is not set
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_MISC_DEVICES=y
@@ -115,9 +114,43 @@ CONFIG_NETDEVICES=y
 CONFIG_NET_ETHERNET=y
 CONFIG_SMSC911X=y
 # CONFIG_NETDEV_1000 is not set
+# CONFIG_GELIC_NET is not set
 # CONFIG_NETDEV_10000 is not set
-# CONFIG_WLAN is not set
 # CONFIG_INPUT_MOUSEDEV is not set
+CONFIG_BT=y
+CONFIG_BT_L2CAP=y
+CONFIG_BT_SCO=y
+CONFIG_BT_RFCOMM=y
+CONFIG_BT_RFCOMM_TTY=y
+CONFIG_BT_BNEP=y
+CONFIG_BT_HIDP=y
+CONFIG_RFKILL=y
+CONFIG_BT_WILINK=y
+CONFIG_WIRELESS=y
+CONFIG_WEXT_CORE=y
+CONFIG_WEXT_PROC=y
+CONFIG_CFG80211=m
+CONFIG_NL80211_TESTMODE=y
+CONFIG_CFG80211_WEXT=y
+CONFIG_WIRELESS_EXT_SYSFS=y
+CONFIG_LIB80211=m
+CONFIG_MAC80211=m
+CONFIG_MAC80211_LEDS=y
+CONFIG_MAC80211_DEBUGFS=y
+CONFIG_TI_ST=y
+
+CONFIG_HID_SUPPORT=y
+CONFIG_HID=y
+CONFIG_WLAN=y
+CONFIG_WL12XX_MENU=m
+CONFIG_WL12XX=m
+CONFIG_WL12XX_SDIO=m
+CONFIG_INPUT=y
+
+CONFIG_RADIO_ADAPTERS=y
+CONFIG_VIDEO_DEV=y
+CONFIG_RADIO_WL128X=y
+CONFIG_VIDEO_V4L2=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_KEYBOARD_ATKBD is not set
 CONFIG_KEYBOARD_GPIO=y
@@ -148,12 +181,12 @@ CONFIG_FB_SH_MOBILE_LCDC=y
 # CONFIG_FB_SH_MOBILE_MERAM is not set
 # CONFIG_LCD_CLASS_DEVICE is not set
 # CONFIG_BACKLIGHT_GENERIC is not set
-# CONFIG_HID_SUPPORT is not set
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_R8A66597=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_MMC=y
 CONFIG_MMC_UNSAFE_RESUME=y
+CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_SH_MMCIF=y
 CONFIG_MMC_RENESAS_SDHI=y
 CONFIG_NEW_LEDS=y
@@ -189,7 +222,7 @@ CONFIG_DEBUG_INFO=y
 # CONFIG_FTRACE is not set
 
 CONFIG_U2_ES1=y
-CONFIG_MUX_STM_TO_SDHI1=y
+# CONFIG_MUX_STM_TO_SDHI1 is not set
 # >>> TO ADD y ONCE SMECO AND PHONET OK
 CONFIG_PHONET=y
 CONFIG_SMECO=y
@@ -258,3 +291,11 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+
+
+CONFIG_CRYPTO_PCBC=y
+CONFIG_CRYPTO_MD4=y
+CONFIG_CRYPTO_MICHAEL_MIC=y
+CONFIG_CRYPTO_SHA256=y
+CONFIG_CRYPTO_ARC4=y
+
