Audio: minor bug fixes.        for checkpatch.

--- a/drivers/char/vcd/Makefile
+++ b/drivers/char/vcd/Makefile
@@ -1,4 +1,4 @@
-EXTRA_CFLAGS += -D__PRINT_VCD__ #-D__DEBUG__ -D__VCD_SPUV_FW_FROM_SD_ENABLE__ -D__VCD_MERAM_ENABLE__ -D__VCD_POWERDOMAIN_ENABLE__ -D__VCD_TTY_ENABLE__
+EXTRA_CFLAGS += -D__PRINT_VCD__  -D__VCD_SPUV_FW_FROM_SD_ENABLE__ #-D__DEBUG__ -D__VCD_MERAM_ENABLE__ -D__VCD_POWERDOMAIN_ENABLE__ -D__VCD_TTY_ENABLE__
 
 
 ifneq ($(KERNELRELEASE),)
