--- a/arch/arm/configs/u2evm_rlte_rev022_defconfig
+++ b/arch/arm/configs/u2evm_rlte_rev022_defconfig
@@ -240,7 +240,7 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_SERIAL_SH_SCI=y
 CONFIG_SERIAL_SH_SCI_CONSOLE=y
 # CONFIG_HW_RANDOM is not set
-CONFIG_TTY_STM=y
+CONFIG_TTY_STM=n
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_SH7730=y
