--- a/net/phonet/Makefile
+++ b/net/phonet/Makefile
@@ -6,6 +6,7 @@ phonet-objs := \
 	socket.o \
 	datagram.o \
 	sysctl.o \
-	af_phonet.o
+	af_phonet.o \
+        ld_phonet.o
 
 pn_pep-objs := pep.o pep-gprs.o
