added the ICS 12w37_V01.0 SSG content onto JB of 12w37_D1_JB baseline

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2367,7 +2367,8 @@ source "drivers/video/omap2/Kconfig"
 
 source "drivers/video/backlight/Kconfig"
 source "drivers/video/display/Kconfig"
-source "drivers/video/av7100/Kconfig"
+#source "drivers/video/av7100/Kconfig"
+source "drivers/video/mhl/Kconfig"
 
 if VT
 	source "drivers/video/console/Kconfig"
