--- a/arch/arm/configs/u2evm_defconfig
+++ b/arch/arm/configs/u2evm_defconfig
@@ -417,9 +417,6 @@ CONFIG_SMECO_TEST=n
 
 # MHI config
 CONFIG_MHI=y
-CONFIG_MHI_PROTO=y
-CONFIG_MHI_PHONET=y
-CONFIG_MHI_MHDP=y
 #CONFIG_MHI_DEBUG=n
 #CONFIG_MHI_DUMP_FRAMES=n
 CONFIG_NET_SCH_MHI=y
@@ -537,3 +534,5 @@ CONFIG_USB_DEVICE_CLASS=n
 CONFIG_USB_SUSPEND=n
 CONFIG_USB_R8A66597_HCD=n
 CONFIG_USB_OTG_WHITELIST=n
+
+CONFIG_SAMSUNG_MHL=y
