--- a/arch/arm/configs/u2_loganlte_rev000_defconfig
+++ b/arch/arm/configs/u2_loganlte_rev000_defconfig
@@ -405,7 +405,7 @@ CONFIG_I2C_GPIO=y
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
 # CONFIG_TOUCHSCREEN_MELFAS is not set
-# CONFIG_TOUCHSCREEN_IST30XX is not set
+CONFIG_TOUCHSCREEN_IST30XX=y
 CONFIG_TOUCHSCREEN_BT432=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
@@ -462,7 +462,7 @@ CONFIG_USB_R8A66597=y
 CONFIG_USB_GADGET_R8A66597=y
 CONFIG_USB_R8A66597_TYPE_BULK_PIPES_12=y
 CONFIG_USB_G_ANDROID=y
-CONFIG_USB_G_ANDROID_SAMSUNG_COMPOSITE=y
+CONFIG_USB_G_ANDROID_SAMSUNG_COMPOSITE=n
 CONFIG_MMC=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_EMBEDDED_SDIO=y
@@ -783,7 +783,7 @@ CONFIG_USB_SWITCH_RT8973=y
 # CONFIG_SEC_MAKE_LCD_TEST is not set
 
 # Enable samsung specific f_mtp
-CONFIG_USB_MTP_SAMSUNG=y
+CONFIG_USB_MTP_SAMSUNG=n
 
 # CHARGER
 CONFIG_CHARGER_SMB328A=y
@@ -945,8 +945,10 @@ CONFIG_RENESAS_MDMLOADER=y
 # CONFIG_PMIC_TPS80032_POW is not set
 # CONFIG_USB_OTG_INTERFACE is not set
 
+# General Renesas reference implementation
+CONFIG_RENESAS=y
+
 # Renesas Bluetooth Implementation
-# CONFIG_RENESAS=y
 # CONFIG_RENESAS_BT=y
 
 # Bluetooth Tethering
