--- a/arch/arm/configs/u2_loganlte_rev000_defconfig
+++ b/arch/arm/configs/u2_loganlte_rev000_defconfig
@@ -1026,3 +1026,5 @@ CONFIG_MMC_BLOCK_BOUNCE=n
 # CONFIG_LOW_MEM_SNPR_MIN_FREE_ZERO_BASE=y
 # CONFIG_LOW_MEM_SNPR_MIN_FREE_OFFSET=25600
 # CONFIG_LOW_MEM_SNPR_LOG_SIGKILL="sigkill"
+
+# CONFIG_SH_TIMER_CMT_ARM is not set
