--- a/arch/arm/configs/u2_loganlte_rev000_defconfig
+++ b/arch/arm/configs/u2_loganlte_rev000_defconfig
@@ -78,7 +78,7 @@ CONFIG_ARCH_SHMOBILE=y
 CONFIG_ARCH_R8A7373=y
 CONFIG_MACH_LOGANLTE=y
 CONFIG_MACH_U2USB=y
-CONFIG_U2_CURRENTTIMER=y
+CONFIG_U2_TIMERS=y
 CONFIG_U2_SDHI=y
 CONFIG_U2_GPIOKEY=y
 CONFIG_MEMORY_SIZE=0x10000000
