ARM_ERRATA_775420 activation (PCP: JK13090447190)
Activation of ARM errata: "A data cache maintenance operation which aborts,
might lead to deadlock"

This option enables the workaround for the 775420 Cortex-A9 (r2p2,
r2p6,r2p8,r2p10,r3p0) erratum. In case a date cache maintenance
operation aborts with MMU exception, it might cause the processor
deadlock. This workaround puts DSB before executing ISB at the
beginning of the abort exception handler.

PCP reference JK13090447190

(cherry picked from commit 4cc7d71c31e821361d9341ee3c10abb54725b4f5)

Conflicts:
	arch/arm/mach-shmobile/Kconfig

--- a/arch/arm/mach-shmobile/Kconfig
+++ b/arch/arm/mach-shmobile/Kconfig
@@ -49,6 +49,7 @@ config ARCH_R8A7373
 	select ARM_GIC
 	select CLKSRC_MMIO
 	select HAVE_SCHED_CLOCK
+	select ARM_ERRATA_775420
 
 comment "SH-Mobile Board Type"
 
