--- a/arch/arm/configs/u2_loganlte_rev000_defconfig
+++ b/arch/arm/configs/u2_loganlte_rev000_defconfig
@@ -470,7 +470,7 @@ CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_RENESAS_MMCIF=y
 CONFIG_MMC_RENESAS_SDHI=y
-CONFIG_MMC_OOPS=y
+# CONFIG_MMC_OOPS is not set
 
 #
 # Kernel hacking
